2010-07-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/snmpfailures.in: new utility for SNMP failures reporting

	* perllib/Torrus/Collector/SNMP.pm: SNMP failures stored in a database

2010-06-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/genlist.in: Added a list of all SNMP hosts

2010-05-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CasaCMTS.pm: new discovery module

2010-05-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/nodeid.in: new command-line utility

	* configure.ac: new Perl module dependency: JSON

2010-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configs/torrus-config.pl:
	replaced $Torrus::ApacheHandler::authorizeUsers with
	$Torrus::CGI::authorizeUsers.

2010-04-08  Jon Nistor  <nistor@snickers.org>
        * perllib/Torrus/DevDiscover/Arbor_E.pm:
        New parameter: Arbor_E::disable-e100-policymgmt, disable-e100-submgmt
        Added policy management and subscriber information

2010-04-07  Jon Nistor  <nistor@snickers.org>

        * perllib/Torrus/DevDiscover/Arbor_E.pm:
        New parameter: Arbor_E::disable-e100-mem
        Added memory usage per CPU for the e100 series devices

2010-04-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree.pm,
	perllib/Torrus/ConfigTree/Writer.pm,
	perllib/Torrus/CGI.pm:
	New parameter: nodeid. It defines a new way of referring
	to subtrees and leaves.
	Also IF-MIB and Foundry discovery is updated.

2010-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: 
	Default snmp-max-msg-size is set back to 1470
	
	* perllib/Torrus/DevDiscover/Foundry.pm: new discovery module

2010-03-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/generic/rfc2790.host-resources.xml:
	[Bernhard Schmidt] Simplify the Uptime graph to display only Days

	* xmlconfig/vendor/ucd.ucd-snmp.xml: